--- a/server-backend/package.json
+++ b/server-backend/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
+    "sequelize": "^6.21.4",
     "socket.io": "^4.5.1"
   },
   "devDependencies": {
